fix word wrap

--- a/src/features/messages/send/message-body-input.module.scss
+++ b/src/features/messages/send/message-body-input.module.scss
@@ -7,15 +7,12 @@
   color: colors.$text-primary;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  word-break: break-all;
   white-space: pre-wrap;
   line-height: 1.375rem;
   font-size: 16px;
 
   &:focus, &:focus-visible {
     outline: none;
-  }
-
-  & > div[data-slate-node="element"] {
-    height: 22px;
   }
 }
