--- a/src/features/messages/send/message-options-bar.module.scss
+++ b/src/features/messages/send/message-options-bar.module.scss
@@ -1,7 +1,6 @@
 .container {
   margin: 12px 8px;
   display: flex;
-  align-items: center;
   gap: 4px;
 
   > button {
