--- a/src/features/messages/send/send-message-form.module.scss
+++ b/src/features/messages/send/send-message-form.module.scss
@@ -4,10 +4,12 @@
   background-color: colors.$bg-textarea;
   border-radius: 8px;
   margin: 0px 16px 24px 16px;
+  width: calc(100% - 32px);
 }
 
 .form {
   display: flex;
+  width: 100%;
   
   & > div:not(:nth-child(2)) {
     flex-shrink: 0;
